// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List component renders a list 1`] = `
@media  {
  .c-bBdCwN {
    list-style-position: inside;
    font-family: var(--fonts-body);
    margin: unset;
    padding: unset;
  }

  .c-bBdCwN > .c-PJLV:not(:last-child) {
    margin-bottom: var(--space-2);
  }

  .c-bBdCwN > .c-PJLV:last-child {
    margin-bottom: 0;
  }
}

@media  {
  .c-bBdCwN-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-bBdCwN-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-bBdCwN-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-bBdCwN-fmPQHp-noCapsize-true::before,
  .c-bBdCwN-fmPQHp-noCapsize-true::after {
    display: none !important;
  }

  .c-bBdCwN-ldmvkx-as-ul {
    padding-left: var(--space-3);
  }

  .c-bBdCwN-ldmvkx-as-ul > .c-PJLV {
    padding-left: var(--space-2);
  }

  .c-bBdCwN-ldmvkx-as-ul > .c-PJLV::marker {
    content: "• ";
    font-weight: bold;
  }
}

<div>
  <ul
    class="c-bBdCwN c-bBdCwN-gvmVBy-size-md c-bBdCwN-fmPQHp-noCapsize-true c-bBdCwN-ldmvkx-as-ul"
  >
    <li
      class="c-PJLV"
    >
      Item 1
    </li>
    <li
      class="c-PJLV"
    >
      Item 2
    </li>
  </ul>
</div>
`;

exports[`List component renders an unordered list with a primary theme 1`] = `
@media  {
  .c-bBdCwN {
    list-style-position: inside;
    font-family: var(--fonts-body);
    margin: unset;
    padding: unset;
  }

  .c-bBdCwN > .c-PJLV:not(:last-child) {
    margin-bottom: var(--space-2);
  }

  .c-bBdCwN > .c-PJLV:last-child {
    margin-bottom: 0;
  }
}

@media  {
  .c-bBdCwN-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-bBdCwN-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-bBdCwN-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-bBdCwN-fmPQHp-noCapsize-true::before,
  .c-bBdCwN-fmPQHp-noCapsize-true::after {
    display: none !important;
  }

  .c-bBdCwN-ldmvkx-as-ul {
    padding-left: var(--space-3);
  }

  .c-bBdCwN-ldmvkx-as-ul > .c-PJLV {
    padding-left: var(--space-2);
  }

  .c-bBdCwN-ldmvkx-as-ul > .c-PJLV::marker {
    content: "• ";
    font-weight: bold;
  }

  .c-bBdCwN-bEVto-as-ol {
    padding-left: var(--space-4);
    list-style-type: decimal;
  }

  .c-bBdCwN-bEVto-as-ol > .c-PJLV {
    padding-left: var(--space-1);
  }

  .c-bBdCwN-bEVto-as-ol > .c-PJLV::marker {
    font-size: .875em;
    font-weight: bold;
  }

  .c-bBdCwN-fnHsRS-theme-primary > .c-PJLV::marker {
    color: var(--colors-primary800);
  }
}

<div>
  <ul
    class="c-bBdCwN c-bBdCwN-gvmVBy-size-md c-bBdCwN-fmPQHp-noCapsize-true c-bBdCwN-ldmvkx-as-ul c-bBdCwN-fnHsRS-theme-primary"
  >
    <li
      class="c-PJLV"
    >
      Item 1
    </li>
    <li
      class="c-PJLV"
    >
      Item 2
    </li>
  </ul>
</div>
`;
